@@ -87,13 +87,40 @@ Make_Pot.bat
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
 			<File
+				RelativePath="..\Resources\cancel-normal.bmp">
+			</File>
+			<File
+				RelativePath="..\Resources\cancel-pressed.bmp">
+			</File>
+			<File
+				RelativePath="..\Resources\dialogs.ico">
+			</File>
+			<File
 				RelativePath="..\Resources\Drives.ico">
+			</File>
+			<File
+				RelativePath="..\Resources\extwarning.ico">
+			</File>
+			<File
+				RelativePath="..\Resources\general.ico">
+			</File>
+			<File
+				RelativePath="..\Resources\iconset.ico">
+			</File>
+			<File
+				RelativePath="..\Resources\logfilter.bmp">
 			</File>
 			<File
 				RelativePath="..\Resources\logfilter.ico">
 			</File>
 			<File
+				RelativePath="..\Resources\lookandfeel.ico">
+			</File>
+			<File
 				RelativePath="..\Resources\misc.ico">
+			</File>
+			<File
+				RelativePath="..\Resources\Overlays.ico">
 			</File>
 			<File
 				RelativePath="..\Resources\proxy.ico">
@@ -115,25 +142,25 @@ Make_Pot.bat
 			</File>
 		</Filter>
 		<File
-			RelativePath="..\Languages\res\bin167.avi">
-		</File>
-		<File
 			RelativePath="..\Resources\bin167.avi">
 		</File>
 		<File
-			RelativePath="..\Languages\res\bin168.avi">
+			RelativePath="..\Languages\res\bin167.avi">
 		</File>
 		<File
 			RelativePath="..\Resources\bin168.avi">
 		</File>
 		<File
+			RelativePath="..\Languages\res\bin168.avi">
+		</File>
+		<File
 			RelativePath="..\Resources\search.avi">
 		</File>
 		<File
-			RelativePath="..\Languages\res\TortoiseProc.manifest">
+			RelativePath="..\Resources\TortoiseProc.manifest">
 		</File>
 		<File
-			RelativePath="..\Resources\TortoiseProc.manifest">
+			RelativePath="..\Languages\res\TortoiseProc.manifest">
 		</File>
 	</Files>
 	<Globals>
