@@ -1,6 +1,8 @@
 - NEW: The settings dialog now has a button to open the system sound
        dialog where the TSVN sounds can be configured.
        See issue #167. (Stefan)
+- NEW: Keyboard accelerators for the shell context menu. 
+       See issue #171. (Stefan)
 - BUG: The status cache didn't watch all required paths. (Stefan)
 - BUG: When files were added to the ignore list, a choice of 
        File.ext or *.ext is given. If the *.ext is chosen the dialog 
